--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <title>Text Encryptor</title>
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <header>
 
-        <div class="principal-title">
-            <h1>¡Esconde tu mensaje de los intrusos!</h1>
+        <div>
+            <h1 class="principal-title">¡Esconde tu mensaje de los intrusos!</h1>
         </div>
         
     </header>
@@ -27,7 +30,7 @@
         <section class="forms-ebox">
             <img class="boveda-cerrada" src="/Images/boveda-cerrada.png" alt="boveda-cerrada.png">
             <form>
-                <textarea class="ebox" id="encode-box" cols="70" rows="10" placeholder="Oculta tu mensaje de los mirones"></textarea>
+                <textarea class="ebox" id="encode-box" cols="70" rows="10" placeholder="Oculta tu mensaje de los mirones 👀"></textarea>
                 <img class="warning-img" src="/Images/advertencia.png" alt="">
                 <p class="warning">Solo letras minúsculas y sin acentos</p>
             </form>
@@ -55,6 +58,6 @@
 </body>
 
 <footer>
-    <h2>Andrés Fernández 2024</h2>
+    <h2 class="second-title">Andrés Fernández (lionmmer) 2024</h2>
 </footer>
 </html>
