--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Text Encryptor</title>
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -28,16 +28,16 @@
 
 
         <section class="forms-ebox">
-            <img class="boveda-cerrada" src="/Images/boveda-cerrada.png" alt="boveda-cerrada.png">
+            <img class="boveda-cerrada" src="./Images/boveda-cerrada.png" alt="boveda-cerrada.png">
             <form>
                 <textarea class="ebox" id="encode-box" cols="70" rows="10" placeholder="Oculta tu mensaje de los mirones 👀"></textarea>
-                <img class="warning-img" src="/Images/advertencia.png" alt="">
+                <img class="warning-img" src="./Images/advertencia.png" alt="">
                 <p class="warning">Solo letras minúsculas y sin acentos</p>
             </form>
         </section>
 
         <section class="forms-dbox">
-            <img class="boveda-abierta" src="/Images/boveda-abierta.png" alt="boveda-abierta.png">
+            <img class="boveda-abierta" src="./Images/boveda-abierta.png" alt="boveda-abierta.png">
             <form>
                 <textarea class="dbox" id="decode-box" cols="70" rows="10" placeholder="Revela tu mensaje"></textarea>
             </form>
@@ -54,10 +54,13 @@
 
 
 
-    <script src="/app.js"></script>
+    
+    <footer>
+        <h2 class="second-title">Andrés Fernández (lionmmer) 2024</h2>
+    </footer>
 </body>
 
-<footer>
-    <h2 class="second-title">Andrés Fernández (lionmmer) 2024</h2>
-</footer>
+<script src="./app.js"></script>
+
+
 </html>
